# toolkit

./: .env  .env.example  .gitignore  db.sqlite3  pyproject.toml  run.sh  sql_app.db  test.sh  tsconfig.json
.github/workflows/: build-backend.yml
backend/: main.py
backend/auth/: serve.py  user_auth.py
backend/db/: database.py
backend/models/: db.py  schemas.py
backend/models/pair/: pair_repository.py
backend/models/user/: user.py  user_repository.py  user_schemas.py
backend/pair/: pair_utils.py  serve.py  utils.py
backend/redis/: redis.py
backend/tests/auth/: test_auth_utilities.py  test_user_auth.py
backend/tests/data/: data_factory.py  test_users.py
backend/tests/integration/: client.py
backend/tests/integration/user/: test_create_user.py
backend/tests/main/: test_main.py
backend/tests/pair/: test_pair_handling.py  test_redis_message_threading.py  test_websocket_handling.py
backend/tests/utils/: redis.py  session.py  websocket.py
backend/tests/validation/: test_validation_for_pair.py  test_validation_for_user.py
backend/threading/: redis_message_thread.py  stoppable_thread.py
backend/user/: serve.py
dom/: apps.py  settings.py  urls.py  views.py
frontend/: .eslintrc.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/assets/styles/: colors.scss
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/components/: FooterBar.vue  NavBar.vue  SignIn.vue  SignUp.vue
frontend/src/components/devices/: DeviceCards.vue  DeviceRow.vue  DevicesTable.vue
frontend/src/mixins/: title.ts
frontend/src/router/: index.ts
frontend/src/store/: store.ts
frontend/src/utils/: auth.ts
frontend/src/views/: DeviceDetailsView.vue  DevicesView.vue  HomeView.vue  PairView.vue  SignInView.vue  SignUpView.vue
templates/: control-sub-view.html  dom-view.html  pair-device-view.html
toolkit/: asgi.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
