[tool.poetry]
name = "dom"
version = "0.0.1"
description = ""
authors = ["theguywhobuildsthings <theguywhobuildsthings@test.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
qrcode = {extras = ["pil"], version = "^7.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
